# spec-driven-devlopment-hackathone

phase-1-console-todo/: .gitignore  README.md  pyproject.toml
phase-1-console-todo/.claude/.skills/console-input/: skill.md
phase-1-console-todo/.claude/.skills/console-output/: skill.md
phase-1-console-todo/.claude/.skills/error-handling/: skill.md
phase-1-console-todo/.claude/.skills/menu-loop/: skill.md
phase-1-console-todo/.claude/.skills/test-generation/: skill.md
phase-1-console-todo/.claude/.skills/validation/: skill.md
phase-1-console-todo/.claude/agents/: console-todo-builder.md  test-generator.md
phase-1-console-todo/.specify/memory/: constitution.md
phase-1-console-todo/history/adr/: 001-dataclass-architecture-decision.md
phase-1-console-todo/history/prompts/1-console-todo-app/: 3-create-feature-spec.spec.prompt.md  4-create-implementation-plan.plan.prompt.md  5-create-implementation-tasks.tasks.prompt.md  6-final-implementation-records.general.prompt.md
phase-1-console-todo/history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md  2-update-claude-configuration.constitution.prompt.md
phase-1-console-todo/specs/001-console-todo-app/: spec.md  tasks.md
phase-1-console-todo/specs/1-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md
phase-1-console-todo/specs/1-console-todo-app/checklists/: requirements.md
phase-1-console-todo/src/: main.py  models.py  todo_app.py  utils.py
phase-1-console-todo/tests/: test_todo_app.py
phase-2-fullstack-todo/: CLAUDE.md
(+19 files in other folders)
